syntax = "proto3";

package payment_v1;

option go_package = "github.com/patyukin/mbs-pkg/pkg/proto/payment_v1;payment_v1";

import "error.proto";

enum PaymentStatus {
  UNKNOWN_PAYMENT_STATUS = 0;
  DRAFT = 1;
  PENDING = 2;
  COMPLETED = 3;
  FAILED = 4;
}

enum TransactionType {
  UNKNOWN_TRANSACTION_TYPE = 0;
  DEBIT = 1;
  CREDIT = 2;
}

service PaymentService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc ConfirmationPayment(ConfirmationPaymentRequest) returns (ConfirmationPaymentResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
}

message CreateAccountRequest {
  string currency = 1;
  int64 balance = 2;
  string user_id = 3;
}

message CreateAccountResponse {
  string message = 1;
  error_v1.ErrorResponse error = 2;
}

message ConfirmationPaymentRequest {
  string code = 1;
  string user_id = 2;
}

message ConfirmationPaymentResponse {
  string message = 1;
  error_v1.ErrorResponse error = 2;
}

message CreatePaymentRequest {
  string sender_account_id = 1;
  string receiver_account_id = 2;
  int64 amount = 3;
  string currency = 4;
  string description = 5;
  string user_id = 6;
}

message CreatePaymentResponse {
  string message = 1;
  error_v1.ErrorResponse error = 2;
}

message Payment {
  string id = 1;
  string sender_account_id = 2;
  string receiver_account_id = 3;
  int64 amount = 4;
  string currency = 5;
  string description = 6;
  PaymentStatus status = 7;
  string created_at = 8;
}

message GetPaymentRequest {
  string payment_id = 1;
  string user_id = 2;
}

message GetPaymentResponse {
  Payment payment = 1;
  error_v1.ErrorResponse error = 2;
}
